[package]
name = "copypaste-daemon"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "copypaste_daemon"
path = "src/lib.rs"

[[bin]]
name = "copypaste-daemon"
path = "src/main.rs"

[features]
# Enables Supabase cloud sync (requires SUPABASE_URL + SUPABASE_ANON_KEY env vars at runtime).
cloud-sync = ["reqwest", "copypaste-supabase", "chacha20poly1305"]
# Enables the relay-as-database sync path (relay client: register/push/subscribe).
# Independent of Supabase — pulls only the async HTTP client (reqwest), NOT
# copypaste-supabase. Active at runtime iff `config.relay_url` is set.
relay-sync = ["reqwest"]

[dependencies]
copypaste-core = { path = "../copypaste-core" }
# Beta W2.1 (arch-1): real P2P stack — mDNS-SD discovery + mTLS transport.
copypaste-p2p = { path = "../copypaste-p2p" }
# Beta W2.2 (arch-1): sync engine + protocol types used by sync_orch.rs.
copypaste-sync = { path = "../copypaste-sync" }
tokio.workspace = true
# D1-D5 graceful shutdown: CancellationToken coordinates across IPC/sync/P2P tasks.
# Already a transitive dep (0.7.x) — pinned here so the feature set is explicit.
tokio-util = { version = "0.7", features = ["rt", "codec"] }
# W2.2: SinkExt / StreamExt for the Framed P2P read/write loops.
# `sink` feature required for SinkExt (send()) on Framed streams.
futures-util = { version = "0.3", features = ["sink"] }
# W2.2: Bytes payload from LengthDelimitedCodec.
bytes = "1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
home.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
uuid.workspace = true
rusqlite.workspace = true
# cloud-sync feature: HTTP client for Supabase REST + Realtime, base64 encoding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
# cloud-sync feature: direct AEAD for the spawn_blocking decrypt helper (avoids
# Arc<Mutex<SyncKey>> across the blocking boundary).
chacha20poly1305 = { workspace = true, optional = true }
# base64 is also required unconditionally for the `import` IPC method
# (CLI sends content bytes as base64-encoded strings to keep the wire JSON-safe).
base64 = { version = "0.22" }
# Beta W2.3 (arch-1): canonical Supabase client (auth + realtime).
copypaste-supabase = { path = "../copypaste-supabase", optional = true }

# UPGRADE/RESTART lifecycle: SIGTERM a stale predecessor daemon during socket
# takeover (see `bind_with_stale_cleanup` in src/ipc.rs). `libc::kill` is the
# minimal wrapper; libc is already in the dependency tree transitively.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation = { version = "0.2", features = ["NSString", "NSData", "NSDictionary", "NSGeometry"] }
# NSWorkspace + NSImage + NSBitmapImageRep + NSImageRep + NSGraphicsContext needed for
# app-icon extraction (app_icon.rs).  NSGraphics supplies NSDeviceRGBColorSpace and the
# colorSpaceName: init variant of NSBitmapImageRep.  NSImageRep is required for the
# NSBitmapImageRep struct to be re-exported from the crate root.
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace", "NSImage", "NSBitmapImageRep", "NSImageRep", "NSGraphics", "NSGraphicsContext"] }
security-framework.workspace = true
# v0.3 Keychain ACL (THREAT-MODEL OI-4): security-framework 2.x does not bind
# SecAccessCreate / SecTrustedApplicationCreateFromPath / SecKeychainItem*,
# so the ACL layer in src/keychain/acl.rs drops to raw FFI and needs the
# CFString / CFArray / CFData wrappers shipped by core-foundation 0.9.
#
# Beta-merge audit HIGH #2: keychain.rs also hand-builds SecItemAdd with
# kSecAttrAccessControl + kSecAttrSynchronizable=false (security-framework
# 2.x has no high-level wrapper for accessibility on generic_password).
# All FFI deps are already transitive via security-framework — pinning
# them as direct deps so the FFI calls compile against a stable range.
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework-sys = "2"
# Beta-merge audit MED #4: read-path Vec<u8> from get_generic_password is
# wrapped in Zeroizing so the heap buffer holding the device secret is
# scrubbed the moment it falls out of scope.
zeroize = { version = "1.7", features = ["derive"] }
# tray-icon + png moved to copypaste-ui::tray_host (the daemon process
# is launched by launchd and cannot host an NSApplication main run loop on
# macOS, which tray-icon / muda::Menu both require).

[[test]]
name = "integration_ipc"
path = "tests/integration_ipc.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

# Beta-bonus: sync orchestrator contract tests (channel close → shutdown, merge handler).
[[test]]
name = "sync_orch_integration"
path = "tests/sync_orch_integration.rs"

# Beta-bonus: P2P init contract tests (discovery + transport construction, clean drop).
[[test]]
name = "p2p_init"
path = "tests/p2p_init.rs"

[[test]]
name = "keychain_macos"
path = "tests/keychain_macos.rs"

# v0.3 (THREAT-MODEL OI-4): Keychain ACL enforcement smoke tests.  Gated to
# macOS at the source level; all tests are `#[ignore]` because they mutate
# the user's real login keychain (no in-memory shim exists for SecAccess*).
[[test]]
name = "keychain_acl"
path = "tests/keychain_acl.rs"

# Beta-bonus: IPC status/health endpoint tests (version, monotonic uptime
# proxy, history count via stats, daemon-not-running typed error, throughput
# sanity). See module docs in tests/health.rs for the full contract list.
[[test]]
name = "health"
path = "tests/health.rs"

# Beta-bonus: end-to-end pairing flow tests — mDNS discovery + PAKE handshake +
# mutual PairedPeers trust. See module docs in tests/pairing_e2e.rs.
[[test]]
name = "pairing_e2e"
path = "tests/pairing_e2e.rs"

# Beta `daemon-import`: tests for the `import` IPC method (insert, dedupe,
# empty input, malformed base64). See module docs in tests/import_handler.rs.
[[test]]
name = "import_handler"
path = "tests/import_handler.rs"

# E2E harness Step A: single-daemon spawn helper + readiness test.
# The reusable helper lives in tests/support/mod.rs (included via `#[path]`).
[[test]]
name = "harness_single_daemon"
path = "tests/harness_single_daemon.rs"

[dev-dependencies]
# `test-util` enables tokio's paused-time test clock (`start_paused`) so the
# write-timeout teardown test runs instantly and deterministically instead of
# waiting out the real WRITE_TIMEOUT. Test-only; not in the production build.
tokio = { workspace = true, features = ["test-util"] }
# Pin below 3.14 — tempfile ≥3.14 pulls getrandom 0.4 which requires Rust 1.85+
# (our MSRV is 1.89 so this is already satisfied, but the pin keeps the
# lock consistent with copypaste-core and avoids an accidental bump).
tempfile = ">=3.0, <3.14"
serde_json = "1"
# Beta-bonus integration tests need direct access to the sync engine + P2P public APIs
# because copypaste-daemon is a binary-only crate (no lib.rs).  See module docs in
# tests/sync_orch_integration.rs and tests/p2p_init.rs for the full gap analysis.
copypaste-sync = { path = "../copypaste-sync" }
copypaste-p2p = { path = "../copypaste-p2p", features = ["test-helpers"] }
# mockito 0.31 supports Rust 1.75 and doesn't require edition 2024 deps;
# used by cloud.rs Wave 2.7 tests (401/429/transient retry paths). These
# tests live under `#[cfg(all(test, feature = "cloud-sync"))]`, so this dep
# is only pulled in when the feature is built.
mockito = "0.31"
# Beta-bonus keychain tests — serialize Keychain Services access (process-global).
# Cross-platform crate; gated at test level via `#[cfg(target_os = "macos")]`.
serial_test = "3"
# Beta-bonus pairing-e2e tests need a raw mDNS daemon with per-test unique
# service types (DiscoveryService hard-codes `_copypaste._tcp.local.`).
mdns-sd = { workspace = true }
# Image round-trip tests build a valid PNG via the `image` crate rather than
# hand-crafting fragile byte arrays (matches copypaste-core's own test style).
image = { workspace = true }

# Beta-bonus keychain tests need direct access to set/get/delete primitives
# (the wrapper uses a hardcoded SERVICE/ACCOUNT so tests use unique account
# names to avoid clobbering the user's real device key entry).
[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework.workspace = true
