[package]
name = "copypaste-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared IPC wire types (Request/Response) for the CopyPaste daemon, UI, and CLI."
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# `home` resolves the platform-specific home directory for `paths::socket_path()`.
# Pinned to workspace version to match the daemon and CLI.
home.workspace = true
