[package]
name = "copypaste-p2p"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "P2P mutual-TLS transport + mDNS-SD peer discovery for CopyPaste"

[lib]
crate-type = ["rlib"]

[dependencies]
# TLS: rustls 0.23 works on Rust 1.65+; tokio-rustls 0.26 requires rustls 0.23
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
# Certificate generation: rcgen 0.12 works on Rust 1.65+
rcgen = { version = "0.12", default-features = false, features = ["ring"] }
# Framed message transport
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
# mDNS-SD service discovery
mdns-sd.workspace = true
# Async runtime
tokio = { workspace = true }
# Crypto for fingerprint
sha2.workspace = true
hex.workspace = true
# PAKE (Password-Authenticated Key Exchange) for device pairing — see ADR-008.
# Pinned to 3.0 (MSRV 1.74); 4.x is pre-release.
opaque-ke = { version = "3.0", default-features = false, features = ["ristretto255-voprf", "argon2", "std"] }
# OsRng used in PAKE handshake — opaque-ke 3.0 re-exports rand but without
# the getrandom feature, so OsRng must come from the workspace rand dep.
rand.workspace = true
# OPAQUE KSF — Argon2 password hashing
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# generic-array — required by opaque-ke message types
generic-array = "0.14"
# HKDF for SessionKey -> XChaCha20 key derivation (ADR-001)
hkdf = { workspace = true }
# Error handling
thiserror.workspace = true
# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
# Required for SinkExt on Framed streams in disconnect tests
futures-util = { workspace = true, features = ["sink"] }
# Network interface enumeration for network_scan tests (already transitive via mdns-sd).
if-addrs = "0.15"
