[package]
name = "copypaste-relay"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "copypaste-relay"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
subtle = { workspace = true }  # S5: pinned to >=2.5 via workspace
tower_governor = { version = "0.4", features = ["axum"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
