[package]
name = "copypaste-relay"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "copypaste-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
subtle = { workspace = true }  # S5: pinned to >=2.5 via workspace
tower_governor = { version = "0.8", features = ["axum"] }
# Required to name RateLimitingMiddleware / QuantaInstant in spawn_governor_cleanup
# bounds. Already in the dependency graph transitively via tower_governor 0.8.
governor = "0.10"
# SSE push (issue #26): ReceiverStream wraps the mpsc that feeds the SSE
# response body. A spawned producer task owns the broadcast receiver + cursor
# and pushes axum `sse::Event`s into the mpsc as items arrive.
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
