[package]
name = "copypaste-supabase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Supabase GoTrue auth + Realtime WebSocket client for CopyPaste"

[lib]
name = "copypaste_supabase"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Auth (GoTrue HTTP client)
# Local override of workspace reqwest 0.11 → 0.12 to close
# RUSTSEC-2026-0098/0099/0104 (rustls-webpki via old rustls 0.21 chain).
# reqwest 0.12 pulls rustls 0.23 + rustls-webpki 0.103 which are unaffected.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Realtime (Phoenix Channel WebSocket)
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
# Shared
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "time", "sync"] }
# mockito 0.31 supports Rust 1.75 and doesn't require edition 2024 deps
mockito = "0.31"
tokio-test = "0.4"
