[package]
name = "copypaste-supabase"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Supabase GoTrue auth + Realtime WebSocket client for CopyPaste"

[lib]
name = "copypaste_supabase"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Auth (GoTrue HTTP client). Now uses workspace pin (0.12) — formerly a local
# override to close RUSTSEC-2026-0098/0099/0104; workspace was bumped 2026-05-23.
reqwest = { workspace = true }
# Realtime (Phoenix Channel WebSocket)
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
# TLS: rustls for custom cert-pinning verifier (CopyPaste-qkao).
# Pinned to same family as the workspace; ring provider consistent with p2p.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
# WebPKI root certificates for the default chain verifier used inside the
# pinning verifier — same version family as tokio-tungstenite's implicit dep.
webpki-roots = "0.26"
# SHA-256 SPKI hash computation for cert pinning.
sha2.workspace = true
# Shared backoff scheduler (CopyPaste-nq31, re-homed CopyPaste-crh3.53):
# BackoffScheduler lives in copypaste-ipc (pure Duration math, light deps) so
# this crate stays a standalone Supabase client — no transitive copypaste-core
# (SQLCipher/crypto/storage, 40+ crates) just for backoff arithmetic.
copypaste-ipc = { path = "../copypaste-ipc" }
# Shared
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "time", "sync"] }
# mockito 0.31 supports Rust 1.75 and doesn't require edition 2024 deps
mockito = "0.31"
tokio-test = "0.4"
serial_test = "3"
