[package]
name = "copypaste-sync"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
copypaste-core = { path = "../copypaste-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
