[package]
name = "copypaste-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Opt-in, privacy-first error reporter for CopyPaste (stub crate, 0.2-beta)"
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
# PII scrubber patterns. Kept crate-local (not workspace) so the telemetry
# crate's privacy surface owns its dependency boundary explicitly.
regex = "1"
# NFKC normalisation runs ahead of every regex pattern in the scrubber so
# Unicode-equivalent homoglyphs (fullwidth digits, Greek omicron in an email
# local part, etc.) cannot bypass the ASCII-shaped patterns.
unicode-normalization = { workspace = true }
# Sentry SDK — crate-local, NOT promoted to workspace so the telemetry
# crate's outbound-network dependency stays isolated.
# default-features disabled to avoid pulling reqwest's full feature set; we
# enable the reqwest transport with rustls (not native-tls) so telemetry does
# not drag openssl-sys into the workspace, plus `panic` and `anyhow`.
#
# Pinned to >=0.35: sentry 0.34 pulled `rustls 0.22` (its own optional
# ureq/curl transport dep) which dragged in the vulnerable
# `rustls-webpki 0.102.8` (RUSTSEC-2026-0049/0098/0099/0104). We only use the
# reqwest transport, so that path was unused, but 0.35 drops the direct
# `rustls 0.22` dep entirely and resolves to the patched `rustls-webpki
# 0.103.13` (still on the `ring` backend — no aws-lc-rs/cmake pulled in).
sentry = { version = "0.35", default-features = false, features = ["reqwest", "rustls", "panic", "anyhow"] }

[dev-dependencies]
# `test` feature enables `sentry::test::with_captured_events` — required for
# the in-memory transport used by `tests/sentry_backend.rs`.
sentry = { version = "0.35", default-features = false, features = ["test"] }
# Required for serde round-trip tests in `tests/serde_contract.rs`.
serde_json = { workspace = true }
