[package]
name = "copypaste-ui-snapshot"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Headless PNG snapshot harness for the CopyPaste Slint desktop UI (CI-friendly, no display)"
publish = false

[lib]
crate-type = ["rlib"]

# Renders each top-level view state to a PNG under target/ui-snapshots/.
[[bin]]
name = "ui-snapshots"
path = "src/main.rs"

[dependencies]
# We only ever use the software renderer: at runtime we install our own headless
# `slint::platform::Platform` via `set_platform()` before any window is created,
# so the default winit/femtovg backends (pulled in workspace-wide and unified by
# Cargo) are present but never initialised — no display server is touched.
# We additively request `renderer-software` (the SoftwareRenderer + take_snapshot
# support) and `gettext` so the `@tr` plural expressions in copypaste-ui's
# `.slint` files compile exactly as they do in the real UI crate.
# NB: `default-features` cannot be overridden here because the workspace `slint`
# entry does not set it; these features are therefore additive.
slint = { workspace = true, features = ["renderer-software", "gettext"] }
image = { workspace = true }
anyhow.workspace = true

[build-dependencies]
slint-build.workspace = true
