[package]
name = "copypaste-ui"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Slint-based history window UI for CopyPaste daemon"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "copypaste-ui"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
# Beta-bonus i18n: `gettext` feature exposes `slint::init_translations!` and
# runtime msgid lookup against `.mo` catalogs under `lang/<locale>/LC_MESSAGES`.
slint = { workspace = true, features = ["gettext"] }
copypaste-ipc = { path = "../copypaste-ipc" }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile = "3"
