[package]
name = "copypaste-ui"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Slint-based history window UI for CopyPaste daemon"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "copypaste-ui"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
# Beta-bonus i18n: `gettext` feature exposes `slint::init_translations!` and
# runtime msgid lookup against `.mo` catalogs under `lang/<locale>/LC_MESSAGES`.
slint = { workspace = true, features = ["gettext"] }
copypaste-ipc = { path = "../copypaste-ipc" }
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Tray host moved from copypaste-daemon to copypaste-ui in v0.3 — daemon is
# spawned by launchd and cannot reliably create an NSApp main run loop, so
# the menu-bar icon now lives in the Slint UI process (which already runs
# an NSApp event loop via slint::run_event_loop).
tray-icon = "0.19"
png = "0.17"

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile = "3"
