[package]
name = "copypaste-ui"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Slint-based history window UI for CopyPaste daemon"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "copypaste-ui"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
toml.workspace = true
dirs.workspace = true
# Beta-bonus i18n: `gettext` feature exposes `slint::init_translations!` and
# runtime msgid lookup against `.mo` catalogs under `lang/<locale>/LC_MESSAGES`.
slint = { workspace = true, features = ["gettext"] }
copypaste-ipc = { path = "../copypaste-ipc" }
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Tray host moved from copypaste-daemon to copypaste-ui in v0.3 — daemon is
# spawned by launchd and cannot reliably create an NSApp main run loop, so
# the menu-bar icon now lives in the Slint UI process (which already runs
# an NSApp event loop via slint::run_event_loop).
tray-icon = "0.19"
png = "0.17"
# Beta hot-fix v0.2.0-beta.4: needed to call `NSApplication::activate` after
# the tray's "Open History" reveals the window. Without it, the menu-bar-only
# (LSUIElement=true) app does not come to the foreground on click. Already
# transitively in the dep graph via tray-icon's `objc2-app-kit 0.3`; declared
# here as a direct dep so we can call it from `main.rs`.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSApplication", "NSResponder", "NSRunningApplication"] }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile = "3"
i-slint-backend-testing = "=1.8.0"
copypaste-core = { path = "../copypaste-core" }
